[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["libs"]
omit = ["*/__init__.py", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[project]
name = "web3-automation-toolkit"
version = "0.1.0"
description = "Collection of web3 automation libraries"
authors = [
    {name = "Indeoo", email = "indeooars@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.setuptools.package-dir]
"." = "libs"